--- a/secondDrill/styles.css
+++ b/secondDrill/styles.css
@@ -3,12 +3,35 @@
   height: 100vh;
   flex-grow: 0;
   background-color: #fcfaf7;
-  text-align: center;
 }
 .logo {
   width: 100vw;
   height: 100px;
   margin: 01 0 32px;
-  padding: 20px 0vw 20px 40vw;
+  padding: 20px 0vw 20px 38vw;
   background-color: #0e1649;
+}
+#registration {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mainHeader {
+  width: 587px;
+  height: 72px;
+  margin: 40px 426px 0 427px;
+  font-size: 72px;
+  text-transform: capitalize;
+  font-weight: bold;
+  letter-spacing: 1.44px;
+  color: #0e1649;
+  line-height: 1;
+  font-family: 'Times New Roman';
+}
+.collab {
+  width: 160px;
+  height: 21px;
+  margin: 40px 213px 40px 214px;
+  font-family: Arial;
+  text-align: center;
 }
