--- a/secondDrill/styles.css
+++ b/secondDrill/styles.css
@@ -1,16 +1,17 @@
 #abraLabs-2 {
-  width: 100vw;
+  max-width: 100%;
   height: 100vh;
-  flex-grow: 0;
+  margin: auto;
+  text-align: center;
   background-color: #fcfaf7;
 }
 .logo {
-  width: 100vw;
-  height: 100px;
-  margin: 01 0 32px;
-  padding: 20px 0vw 20px 38vw;
   background-color: #0e1649;
+  display: flex;
+  padding: 20px 599px;
+  justify-content: space-evenly;
 }
+
 #registration {
   display: flex;
   justify-content: center;
@@ -19,19 +20,12 @@
 .mainHeader {
   width: 587px;
   height: 72px;
-  margin: 40px 426px 0 427px;
-  font-size: 72px;
+  margin: 40px 0 40px 0;
+  font-size: 60px;
   text-transform: capitalize;
   font-weight: bold;
   letter-spacing: 1.44px;
   color: #0e1649;
   line-height: 1;
   font-family: 'Times New Roman';
-}
-.collab {
-  width: 160px;
-  height: 21px;
-  margin: 40px 213px 40px 214px;
-  font-family: Arial;
-  text-align: center;
 }
