--- a/thirdDrill/styles.css
+++ b/thirdDrill/styles.css
@@ -25,6 +25,7 @@
   line-height: 1.3;
   text-align: left;
   color: #0e1649;
+  text-transform: capitalize;
 }
 .subHeader {
   width: 159px;
@@ -34,6 +35,7 @@
   color: #000;
   font-size: 24px;
   font-weight: bolder;
+  text-transform: capitalize;
 }
 .buttonSec {
   width: 701px;
