--- a/secondDrill/styles.css
+++ b/secondDrill/styles.css
@@ -85,6 +85,16 @@
   font-size: 22px;
   font-weight: bold;
 }
+.readMore:hover {
+  background-color: #f55318;
+}
+.readMore:focus {
+  border: solid 2px #cc4621;
+  background-color: #f55318;
+}
+.readMore:active {
+  background-color: #ff8d66;
+}
 .hRow {
   width: 100%;
   height: 1px;
@@ -139,6 +149,16 @@
   font-family: 'Courier New';
   font-size: 22px;
   font-weight: bold;
+}
+.formBtn:hover {
+  background-color: #f55318;
+}
+.formBtn:focus {
+  border: solid 2px #cc4621;
+  background-color: #f55318;
+}
+.formBtn:active {
+  background-color: #ff8d66;
 }
 .contactUs {
   width: 175px;
