--- a/secondDrill/styles.css
+++ b/secondDrill/styles.css
@@ -84,6 +84,8 @@
   font-family: 'Courier New';
   font-size: 22px;
   font-weight: bold;
+
+  text-transform: capitalize;
 }
 .readMore:hover {
   background-color: #f55318;
@@ -149,6 +151,7 @@
   font-family: 'Courier New';
   font-size: 22px;
   font-weight: bold;
+  text-transform: capitalize;
 }
 .formBtn:hover {
   background-color: #f55318;
