--- a/firstDrill/styles.css
+++ b/firstDrill/styles.css
@@ -7,7 +7,7 @@
 .logo {
   width: 100%;
   height: 100px;
-  margin: 01 0 32px;
+  margin: 0 0 32px;
   padding: 20px 1134px 20px 64px;
   background-color: #0e1649;
 }
@@ -28,7 +28,7 @@
 }
 
 .subtext {
-  font-family: Courier New;
+  font-family: 'Courier New';
   font-size: 26px;
   font-weight: normal;
   font-stretch: normal;
@@ -99,7 +99,7 @@
 .firstPara {
   width: 648px;
   height: 108px;
-  margin: 16px 0 2px;
+  margin: 16px 0 10px 0;
   line-height: 1.5;
   font-size: 18px;
   font-family: Arial;
@@ -110,7 +110,7 @@
 }
 
 .articlePara-2 {
-  margin-top: 126px;
+  margin: 40px 0 0 0;
 }
 .secondHead {
   width: 251px;
@@ -124,11 +124,13 @@
 .secondPara {
   width: 648px;
   height: 189px;
-  margin: 16px 0 0;
+  margin: 16px 0 0 0;
   font-size: 18px;
   line-height: 1.5;
 }
-
+.insideText-2 {
+  margin: 32px 0 0 0;
+}
 .paraLink-2 {
   color: #ff7748;
 }
