--- a/secondDrill/styles.css
+++ b/secondDrill/styles.css
@@ -1,23 +1,28 @@
 #abraLabs-2 {
   max-width: 100%;
   height: 100vh;
-  margin: auto;
+  margin: 0 auto;
   text-align: center;
   background-color: #fcfaf7;
 }
 .logo {
+  /* one way to center */
+  /* display: flex; */
+  /* justify-content: space-evenly; */
   background-color: #0e1649;
-  display: flex;
-  padding: 20px 599px;
-  justify-content: space-evenly;
+  padding: 20px;
+  margin: 0 auto;
+}
+.center-element {
+  margin: 0 auto;
 }
 
 #registration {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  flex-direction: row;
 }
+
 .mainHeader {
   margin: 40px 0 40px 0;
   font-size: 60px;
@@ -77,7 +82,7 @@
   height: 57px;
   border-radius: 100px;
   background-color: #ff7748;
-  border: solid 2px #ff7748;
+  border: none;
   color: #fff;
   font-style: italic;
   letter-spacing: 2.2px;
@@ -124,9 +129,9 @@
 }
 .formInput {
   width: 426px;
-  height: 56px;
+  /* height: 56px; */
   margin: 32px 507px 32px 507px;
-  display: flex;
+  display: block;
   padding: 16px 328px 16px 24px;
   border-radius: 100px;
   border: solid 1px #1c1c1c;
@@ -144,7 +149,7 @@
   height: 57px;
   border-radius: 100px;
   background-color: #ff7748;
-  border: solid 2px #ff7748;
+  border: none;
   color: #fff;
   font-style: italic;
   letter-spacing: 2.2px;
