--- a/fifthDrill/style.css
+++ b/fifthDrill/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Assistant:wght@600&display=swap');
 .container {
   background-image: url('./imgs/Background.png');
+  background-size: cover;
   width: 100%;
   min-width: 500px;
   height: 100vh;
-  object-fit: cover;
 }
 .logo {
   width: 242px;
